Wave 2b + 3a: ProductImportingEvent record; virtual threads for export fan-outs
Wave 2b (record reviews per docs/06 triage):
- ProductImportingEvent -> record (internal queue carrier, no serde)
- Reviewed and kept as classes: JsonErrorPayload (constants holder),
  RelationshipType (mutable, persisted graph model), SegmentRef (VPACK),
  AccessTokenUtil (util) - triage matrix held

Wave 3a (virtual threads, per-run blocking fan-outs only):
- JobCsvExportForSegment / JobExcelExportForSegment /
  JobGoogleSheetExportForSegment: fixed pools -> newVirtualThreadPerTaskExecutor
- SegmentQueryManagement: 2-task parallel AQL + export fan-out -> VT
- NOT converted: newSingleThreadExecutor sites (ordering semantics) and
  static shared pools (load-shaping; needs load test) - rationale in docs/06

Gates: compile main+test green (release=25), boot smoke on JDK 25 OK