@@ -109,8 +109,10 @@ public class JobCsvExportForSegment extends ReactiveExportDataJob {
 	 */
 	@Override
 	public FileApiResponse processAndReturnData(final Map<String, Object> data) {
-		// Use all thread for exporting and 1 thread for websocket notification
-		ExecutorService createFileExecutor = Executors.newFixedThreadPool(GET_SEGMENT_DATA_FOR_CSV_THREAD_POOL_SIZE);
+		// Wave 3 (docs/06): virtual threads — fan-out tasks are blocking ArangoDB reads;
+		// thread-per-task replaces the fixed pool, DB parallelism stays bounded by the
+		// driver's connection pool.
+		ExecutorService createFileExecutor = Executors.newVirtualThreadPerTaskExecutor();
 
 		try {
 			String segmentId = data.get("segmentId").toString();
